=================== Release 1.0 2017-03-01 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/01)
        * Added support for DilateQueues in each project. (2017/02/28)
        * Made sorting & adding views floating. Also minor modification to the system for computing height of a component from the bottom. (2017/02/27)
        * Added support for a displayable floating menu for each view that contains a table or tables. (2017/02/27)
        * Improved support for tasks marked as "NOT APPLICABLE". (2017/02/27)
        * Changed "1 running days" for "1 running day". (2017/02/27)
        * Added support for OSR & SR. (2017/02/27)
        * Removed support for this 3 task states: VERIFY, VERIFIED, NOT VERIFIED. (2017/02/27)
        * Modified sizes of inputs for core data. (2017/02/26)
        * Removed size limitations to core data. (2017/02/26)
        * Added support for adding local notifications to each project for starting & closing times. (2017/02/25)
        * Added base support for local notifications. (2017/02/25)
        * Corrected bug where tasks where being marked as NOT DONE before the working day begins. (2017/02/25)
        * Added support for PendingQueues in each project. Also added support for sanity checks when loading tasks. (2017/02/24)
        * Added support for checking if the day is current or not, and allow editing based on that. (2017/02/23)
        * Added support for smart offset of a textfield which is hidden by the keyboard. (2017/02/23)
        * Added support for two types of floating message views. (2017/02/22)
        * Added support for overlay used to change the status of a task. (2017/02/22)
        * Added checks to edit a task only when the day is marked as open. (2017/02/22)
        * Added support for *ViewTask* view. (2017/02/21)
        * Maked the username field of data optional. (2017/02/21)
        * Changed the font to *Avenir Next Condensed*. (2017/02/21)